--- a/css/main.css
+++ b/css/main.css
@@ -158,3 +158,12 @@ ul.posts span {
 .post pre.terminal code {
   background-color: #333;
 }
+
+blockquote {
+  font-size: 1em;
+  line-height: 1.4em;
+  padding: 0px 10px 0 10px;
+  margin: 5px 0 0 20px;
+  border-left: 5px solid #999;
+  font-style: italic;
+}
