Primeros cambios en estilo de blog

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,11 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Mate:400,400italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/css/main.css">
+
 
     </head>
     <body>
