--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ a:visited { color: #a0a; }
 
 blockquote {
   font-size: 1em;
-  line-height: 1.4em;
+  line-height: 1.5em;
   padding: 0px 10px 0 10px;
   margin: 5px 0 0 20px;
   border-left: 5px solid #999;
@@ -43,8 +43,7 @@ blockquote {
 }
 
 img{
-  min-width: 42em;
-  max-width: 42em;
+  width: 100%;
 }
 
 /*****************************************************************************/
@@ -68,7 +67,7 @@ ul.posts span {
 }
 
 ul.posts li a{
-  color: #554e44;
+  color: #181818;
 }
 
 ul.posts li a:link{
@@ -80,7 +79,7 @@ ul.posts li a:hover{
 }
 
 ul.posts li a:visited{
-  color: #606060;
+ /* color: #606060;*/
 }
 
 /*****************************************************************************/
@@ -92,7 +91,7 @@ ul.posts li a:visited{
 .site {
   font-size: 115%;
   text-align: justify;
-  width: 42em;
+  /*width: 42em;*/
   margin: 3em auto 2em;
   line-height: 1.5em;
 }
@@ -100,11 +99,12 @@ ul.posts li a:visited{
 .site .header a {
   font-weight: bold;
   text-decoration: none;
+  font-size: 100%;
 }
 
 .site .header h1.title {
   display: inline-block;
-  margin-bottom: 2em;
+  /*margin-bottom: 2em;*/
 
 }
 
@@ -177,6 +177,11 @@ ul.posts li a:visited{
 
 .post ul, .post ol {
   margin-left: 1.35em;
+  line-height: 1.5em;
+}
+
+.post ul li, .post ol li{
+  line-height: 1.5em;
 }
 
 .post code {
@@ -206,4 +211,31 @@ ul.posts li a:visited{
 
 .post a{
   color: #606060;
+}
+
+.posts .post-name{
+  font-family: 'Open Sans', sans-serif;
+}
+
+.posts .post-name a{
+  color: #181818;
+}
+
+/*****************************************************************************/
+/*
+/* Custom
+/*
+/*****************************************************************************/
+.left{
+  margin: 3em auto 2em;
+}
+
+.header .about{
+  margin-right: 2.5em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+.header .about p{
+  margin-top: 1em;
 }
