cambios en primeros post y estilos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,13 +27,16 @@
     <div class="container">
       <div class="one-third column">
         <div class="site">
+          <a href="/" style="text-decoration:none;" class="home-link"><i class="icon-home icon-2x" style="float:right;"></i></a>
         <div class="header">
           <h1 class="title"><a href="/">J.D. Zárate</a></h1>
-          <div class="about">
-            <a href="http://twitter.com/jdzaratem/" target="_blank"><i class="icon-twitter icon-2x"></i></a>
+          <br>
+          <a href="http://twitter.com/jdzaratem/" target="_blank"><i class="icon-twitter icon-2x"></i></a>
           <a href="http://github.com/jdzarate/" target="_blank"><i class="icon-github-sign icon-2x"></i></a>
+          <div class="about">
+            
           <p>
-            Trabajo como analista de sistemas y soy co-fundador de <a href="http://www.crupzi.com" target="_blank" style="color:#d14e0f; font-weight: 300;">Crupzi.com</a>. <br><br>En mi tiempo libre programo, escucho música Indie, veo sitcoms, reflexiono y sigo programando.<br>
+            Trabajo como desarrollador de software y soy co-fundador de <a href="http://www.crupzi.com" target="_blank" style="color:#d14e0f; font-weight: 300;">Crupzi.com</a>. <br><br>En mi tiempo libre programo, escucho música Indie, veo sitcoms y reflexiono sobre el mundo. Todo eso puedo ocurrir en simultáneo. Se llama "multitasking".<br>
           </p>
           
           </div>
