--- a/css/skeleton/layout.css
+++ b/css/skeleton/layout.css
@@ -22,7 +22,7 @@
 
 /* #Media Queries
 ================================================== */
-
+	.home-link{display: none;}
 	/* Smaller than standard 960 (devices and browsers) */
 	@media only screen and (max-width: 959px) {}
 
@@ -35,6 +35,8 @@
 			margin-top: 1em; 
 		}
 		.header .about{ display: none;}
+		.home-link{display: inline;}
+		.site{margin: 1em auto 1em;}
 	}
 
 	/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
@@ -43,6 +45,8 @@
 			margin-top: 1em; 
 		}
 		.header .about{ display: none;}
+		.home-link{display: inline;}
+		.site{margin: 1em auto 1em;}
 	}
 
 	/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
@@ -51,6 +55,8 @@
 			margin-top: 1em; 
 		}
 		.header .about{ display: none;}
+		.home-link{display: inline;}
+		.site{margin: 1em auto 1em;}
 	}
 
 
