--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; 
   font-family: 'Open Sans', sans-serif;
+  text-align: left;
 }
 
 h1 { margin-bottom: 1em; font-weight: 400;}
