post build it y cambios en layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,8 @@
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Mate:400,400italic' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="/css/skeleton/base.css">
@@ -22,11 +21,9 @@
 
     </head>
     <body>
-
-
     <div class="container">
-      <div class="one-third column">
-        <div class="site">
+      <div class="four columns">
+        <div class="site" style="text-align:left; padding:0; line-height:1.4em;">
           <a href="/" style="text-decoration:none;" class="home-link"><i class="icon-home icon-2x" style="float:right;"></i></a>
         <div class="header">
           <h1 class="title"><a href="/">J.D. Zárate</a></h1>
@@ -35,15 +32,14 @@
           <a href="http://github.com/jdzarate/" target="_blank"><i class="icon-github-sign icon-2x"></i></a>
           <div class="about">
             
-          <p>
-            Trabajo como desarrollador de software y soy co-fundador de <a href="http://www.crupzi.com" target="_blank" style="color:#d14e0f; font-weight: 300;">Crupzi.com</a>. <br><br>En mi tiempo libre programo, escucho música Indie, veo sitcoms y reflexiono sobre el mundo. Todo eso puedo ocurrir en simultáneo. Se llama "multitasking".<br>
+          <p style="font-size:90%; font-family:'Droid Sans', sans-serif;">
+            Trabajo como desarrollador de software y soy co-fundador de <a href="http://www.crupzi.com" target="_blank" style="font-weight: 700;">Crupzi.com</a>.
           </p>
-          
           </div>
         </div>
         </div>
       </div>
-      <div class="two-thirds column">
+      <div class="twelve columns">
         <div class="site">
           {{ content }}
           <div class="footer">
@@ -57,8 +53,6 @@
             </div>
           </div>
       </div>
-
     </div><!-- container -->
-
     </body>
 </html>
