--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
         <!-- Custom CSS -->
         <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
-
+        <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="/css/skeleton/base.css">
         <link rel="stylesheet" href="/css/skeleton/skeleton.css">
