Cambios en layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
         <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="/css/skeleton/base.css">
         <link rel="stylesheet" href="/css/skeleton/skeleton.css">
@@ -22,7 +23,7 @@
     </head>
     <body>
     <div class="container">
-      <div class="four columns">
+      <!-- <div class="four columns">
         <div class="site" style="text-align:left; padding:0; line-height:1.4em;">
           <a href="/" style="text-decoration:none;" class="home-link"><i class="icon-home icon-2x" style="float:right;"></i></a>
         <div class="header">
@@ -30,6 +31,8 @@
           <br>
           <a href="http://twitter.com/jdzaratem/" target="_blank"><i class="icon-twitter icon-2x"></i></a>
           <a href="http://github.com/jdzarate/" target="_blank"><i class="icon-github-sign icon-2x"></i></a>
+          <a href="http://jdzarate.tumblr.com/" target="_blank" style="margin-left:0.3em;"><i class="icon-tumblr-sign icon-2x"></i></a>
+          <a href="https://www.google.com/+JoseDanielZarateM" target="_blank" style="margin-left:0.3em;"><i class="icon-google-plus-sign icon-2x"></i></a>
           <div class="about">
             
           <p style="font-size:90%; font-family:'Droid Sans', sans-serif;">
@@ -38,15 +41,25 @@
           </div>
         </div>
         </div>
+      </div> -->
+      <div class="offset-by-two eleven columns">
+          <a href="/" style="text-decoration:none;" class="home-link"><i class="icon-home icon-2x" style="float:right;"></i></a>
       </div>
-      <div class="twelve columns">
+      <div class="offset-by-two eleven columns">
         <div class="site">
+          <div class="header">
+            <h1 class="title"><a href="/">J.D. Zárate</a></h1>
+          </div>
           {{ content }}
           <div class="footer">
               <div class="contact">
                 <p>
-                  J.D. Zárate<br />
+                  J.D. Zárate
                 </p>
+                <a href="http://twitter.com/jdzaratem/" target="_blank"><i class="icon-twitter icon-2x"></i></a>
+                  <a href="http://github.com/jdzarate/" target="_blank"><i class="icon-github-sign icon-2x"></i></a>
+                  <a href="http://jdzarate.tumblr.com/" target="_blank" style="margin-left:0.3em;"><i class="icon-tumblr-sign icon-2x"></i></a>
+                  <a href="https://www.google.com/+JoseDanielZarateM" target="_blank" style="margin-left:0.3em;"><i class="icon-google-plus-sign icon-2x"></i></a>
               </div>
               <div class="contact">
               </div>
