Cambios en layouts e incorporación de secciones.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,8 +47,20 @@
       </div>
       <div class="offset-by-two eleven columns">
         <div class="site">
-          <div class="header">
-            <h1 class="title"><a href="/">J.D. Zárate</a></h1>
+          <div class="header" style="background:#e6e6e6;">
+            <div class="row">
+              <div class="four columns" style="">
+                <h1 class="title" style="padding:5px;"><a href="/">J.D. Zárate</a></h1>
+              </div>
+              <div class="six columns">
+                  <ul class="navbar">
+                    <li><a href="/about/">Acerca De</a></li>
+                    <li><a href="/projects/">Proyectos</a></li>
+                    <li><a href="/books/">Libros</a></li>
+                    <li><a href="/music/">Música</a></li>                    
+                  </ul>
+              </div>
+            </div>
           </div>
           {{ content }}
           <div class="footer">
