--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ ul.posts li a:visited{
 
 .site {
   font-size: 115%;
-  text-align: justify;
+  text-align: left;
   /*width: 42em;*/
   margin: 3em auto 2em;
   line-height: 1.5em;
