Cambios en layout y navegación.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,19 +46,18 @@
       <div class="offset-by-two eleven columns">
           <a href="/" style="text-decoration:none;" class="home-link"><i class="icon-home icon-2x" style="float:right;"></i></a>
       </div>
-      <div class="offset-by-two eleven columns">
+      <div class="offset-by-two twelve columns">
         <div class="site">
           <div class="header" style="background:#e6e6e6;">
             <div class="row">
               <div class="four columns" style="">
                 <h1 class="title" style="padding:5px;"><a href="/">J.D. Zárate</a></h1>
               </div>
-              <div class="six columns">
+              <div class="seven columns">
                   <ul class="navbar">
                     <li><a href="/about/">Acerca De</a></li>
                     <li><a href="/projects/">Proyectos</a></li>
-                    <li><a href="/books/">Libros</a></li>
-                    <li><a href="/music/">Música</a></li>                    
+                    <li><a href="/writeups/">Rese&ntilde;as</a></li>
                   </ul>
               </div>
             </div>
