Cambios en layout e incorporación de página de proyectos y about.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,53 +23,47 @@
         <script src="https://apis.google.com/js/plusone.js"></script>
     </head>
     <body>
-    <div class="container">
-      <!-- <div class="four columns">
-        <div class="site" style="text-align:left; padding:0; line-height:1.4em;">
-          <a href="/" style="text-decoration:none;" class="home-link"><i class="icon-home icon-2x" style="float:right;"></i></a>
-        <div class="header">
-          <h1 class="title"><a href="/">J.D. Zárate</a></h1>
-          <br>
-          <a href="http://twitter.com/jdzaratem/" target="_blank"><i class="icon-twitter icon-2x"></i></a>
-          <a href="http://github.com/jdzarate/" target="_blank"><i class="icon-github-sign icon-2x"></i></a>
-          <a href="http://jdzarate.tumblr.com/" target="_blank" style="margin-left:0.3em;"><i class="icon-tumblr-sign icon-2x"></i></a>
-          <a href="https://www.google.com/+JoseDanielZarateM" target="_blank" style="margin-left:0.3em;"><i class="icon-google-plus-sign icon-2x"></i></a>
-          <div class="about">
-            
-          <p style="font-size:90%; font-family:'Droid Sans', sans-serif;">
-            Trabajo como desarrollador de software y soy co-fundador de <a href="http://www.crupzi.com" target="_blank" style="font-weight: 700;">Crupzi.com</a>.
-          </p>
-          </div>
-        </div>
-        </div>
-      </div> -->
-      <div class="offset-by-two eleven columns">
-          <a href="/" style="text-decoration:none;" class="home-link"><i class="icon-home icon-2x" style="float:right;"></i></a>
-      </div>
-      <div class="offset-by-two twelve columns">
-        <div class="site">
-          <div class="header" style="background:#e6e6e6;">
-            <div class="row">
-              <div class="four columns" style="">
-                <h1 class="title" style="padding:5px;"><a href="/">J.D. Zárate</a></h1>
-              </div>
-              <div class="seven columns">
-                  <ul class="navbar">
-                    <li><a href="/about/">Acerca De</a></li>
-                    <li><a href="/projects/">Proyectos</a></li>
-                    <li><a href="/writeups/">Rese&ntilde;as</a></li>
-                  </ul>
+<!--     <div class="offset-by-two eleven columns">
+        <a href="/" style="text-decoration:none;" class="home-link"><i class="icon-home icon-2x" style="float:right;"></i></a>
+    </div> -->
+    <div class="" style="background:#263238; padding: 1.5em 0 0.5em 0;">
+      <div class="container">
+        <div class="site-header">
+            <div class="header" style="background:#263238;">
+              <div class="row">
+                  <h1 class="title" style=""><a href="/">J.D. Zárate</a></h1>
               </div>
             </div>
-          </div>
+        </div>
+      </div>
+    </div>
+    <div class="" style="background:#eee;">
+      <div class="container">
+        <div class="site-subheader">
+            <div style="background:#eee;">
+              <div class="row">
+                    <ul class="navbar">
+                      <li><a href="/">Blog</a></li>
+                      <li><a href="/about/">Acerca De</a></li>
+                      <li><a href="/projects/">Proyectos</a></li>
+                      <li><a href="/writeups/">Rese&ntilde;as</a></li>
+                    </ul>
+              </div>
+            </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="thirteen columns">
+        <div class="site">
           {{ content }}
           <div class="footer">
               <div class="contact">
                 <p>
                   J.D. Zárate
                 </p>
-                <a href="http://twitter.com/jdzaratem/" target="_blank"><i class="icon-twitter icon-2x"></i></a>
-                  <a href="http://github.com/jdzarate/" target="_blank"><i class="icon-github-sign icon-2x"></i></a>
+                <a href="http://twitter.com/jdzaratem/" target="_blank" ><i class="icon-twitter-sign icon-2x"></i></a>
+                  <a href="http://github.com/jdzarate/" target="_blank" style="margin-left:0.3em;"><i class="icon-github-sign icon-2x"></i></a>
                   <a href="http://jdzarate.tumblr.com/" target="_blank" style="margin-left:0.3em;"><i class="icon-tumblr-sign icon-2x"></i></a>
                   <a href="https://www.google.com/+JoseDanielZarateM" target="_blank" style="margin-left:0.3em;"><i class="icon-google-plus-sign icon-2x"></i></a>
               </div>
