--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="/css/skeleton/skeleton.css">
         <link rel="stylesheet" href="/css/skeleton/layout.css">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+        <link href='http://www.jdzarate.com/feed.xml' rel='alternate' type='application/rss+xml'>
         <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="https://apis.google.com/js/plusone.js"></script>
     </head>
@@ -66,8 +67,7 @@
                   <a href="http://github.com/jdzarate/" target="_blank" style="margin-left:0.3em;"><i class="icon-github-sign icon-2x"></i></a>
                   <a href="http://jdzarate.tumblr.com/" target="_blank" style="margin-left:0.3em;"><i class="icon-tumblr-sign icon-2x"></i></a>
                   <a href="https://www.google.com/+JoseDanielZarateM" target="_blank" style="margin-left:0.3em;"><i class="icon-google-plus-sign icon-2x"></i></a>
-              </div>
-              <div class="contact">
+                   <a href="https://www.jdzarate.com/feed.xml" target="_blank" style="margin-left:0.3em;"><i class="icon-rss icon-2x"></i></a>
               </div>
             </div>
           </div>
