para suscripciones vía pushbullet.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,11 +63,18 @@
                 <p>
                   J.D. Zárate
                 </p>
+                <div>
                 <a href="http://twitter.com/jdzaratem/" target="_blank" ><i class="icon-twitter-sign icon-2x"></i></a>
                   <a href="http://github.com/jdzarate/" target="_blank" style="margin-left:0.3em;"><i class="icon-github-sign icon-2x"></i></a>
                   <a href="http://jdzarate.tumblr.com/" target="_blank" style="margin-left:0.3em;"><i class="icon-tumblr-sign icon-2x"></i></a>
                   <a href="https://www.google.com/+JoseDanielZarateM" target="_blank" style="margin-left:0.3em;"><i class="icon-google-plus-sign icon-2x"></i></a>
-                   <a href="https://www.jdzarate.com/feed.xml" target="_blank" style="margin-left:0.3em;"><i class="icon-rss icon-2x"></i></a>
+                </div>
+              </div>
+              <div class="subscribe">
+              <p>
+                  Puedes suscribirte vía <a href="http://www.jdzarate.com/feed.xml">rss</a> o también puedes recibir notificaciones sobre nuevos posts en tu desktop, tablet o smartphone vía Pushbullet <br> <a class="pushbullet-subscribe-widget" data-channel="jdzarate" data-widget="button" data-size="small"></a>
+<script type="text/javascript">(function(){var a=document.createElement('script');a.type='text/javascript';a.async=true;a.src='https://widget.pushbullet.com/embed.js';var b=document.getElementsByTagName('script')[0];b.parentNode.insertBefore(a,b);})();</script>
+                </p>
               </div>
             </div>
           </div>
