--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ blockquote {
 }
 
 img{
-  width: 100%;
+  width: auto;
 }
 
 /*****************************************************************************/
